--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Where is Dimi?</h1>
     <h3>Fløyen</h3>
+    <img src="https://github.com/jeroen-van-braeckel/find.dimi.xxx/blob/main/floyen.png?raw=true">
 </body>
 </html>
