--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Where is Dimi?</h1>
     <h3>Fløyen</h3>
     <img src="https://github.com/jeroen-van-braeckel/find.dimi.xxx/blob/main/floyen.png?raw=true">
+
+    <h1>Exclusve free content:</h1>
+    <h3>Dimi swallows big sausage</h3>
+    <img src="https://github.com/jeroen-van-braeckel/find.dimi.xxx/blob/main/dimi_worst.png?raw=true">
 </body>
 </html>
