--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Where is Dimi?</h1>
     <h3>Fløyen</h3>
     <img src="https://github.com/jeroen-van-braeckel/find.dimi.xxx/blob/main/floyen.png?raw=true">
-
+    <p>"Ik bezocht in de laatste 48u trouwens Beffen, sletten, trolsletten en tetten"</p>
+<img src="https://i.kym-cdn.com/photos/images/newsfeed/002/363/961/892.jpeg">
     <h1>Exclusve free content:</h1>
     <h3>Dimi swallows big sausage</h3>
     <img src="https://github.com/jeroen-van-braeckel/find.dimi.xxx/blob/main/dimi_worst.png?raw=true">
